--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -6,3 +6,7 @@
 	border-radius: 20px;
 	max-height: 100%;
 }
+
+.tile {
+	background-color: white;
+}
